# paster

./: .env  .gitignore  Cargo.toml  README.md
migrations/2019-12-29-150059_user/: down.sql  up.sql
src/: constants.rs  error.rs  main.rs  schema.rs
src/api/: account.rs
src/common/: mod.rs  path_matcher.rs
src/config/: app.rs  db.rs
src/middleware/: authentication_middleware.rs
src/model/: access_token.rs  mod.rs  response.rs  user.rs
src/service/: account_service.rs
src/utils/: hasher.rs  mod.rs  token_utils.rs
