[package]
name = "paste-cross"
version = "0.1.0"
authors = ["m77can <m77can@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
env_logger = "0.7.1"
actix-rt = "1.0.0"
serde_derive = "1.0.104"
serde = "1.0.104"
log = "0.4.8"
