[package]
name = "paste-cross"
version = "0.1.0"
authors = ["m77can <m77can@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
env_logger = "0.7.1"
actix-rt = "1.0.0"
serde_derive = "1.0.104"
serde = "1.0.104"
log = "0.4.8"
dotenv = "0.15.0"
chrono = "0.4.10"
jsonwebtoken = "6.0.1"
diesel = {version="1.4.3",features=["chrono", "mysql", "r2d2", "serde_json"]}
libreauth = "0.11.0"
futures = "0.3.1"
http = "0.2.0"
actix = "0.9.0"
actix-cors = "0.2.0"
failure = "0.1.6"
uuid = "0.8.1"
validator = "0.10.0"
serde_json = "1.0.44"
lazy_static = "1.4.0"
num_cpus = "1.11.1"
r2d2 = "0.8.8"
actix-service = "1.0.1"
bcrypt = "0.6.1"